--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Site Metas -->
     <title>EMEK Elektrik ve Elektronik</title>  
-    <meta name="keywords" content="berber sakal Saç düzeltme tıraş Kesimi Afyonkarahisar Merkez CENTILMEN">
-    <meta name="description" content="Sadece yüksek kaliteli bir saç kesimi elde etmekle<br>
-	kalmayacak, aynı zamanda benzersiz bireyselliğinizi de <br>
-	bulacağınız CENTILMEN berber stüdyosuna hoş geldiniz. ">
+    <meta name="keywords" content="">
+    
+	
+	
     <meta name="author" content="pooya vaghef">
     <!-- Site Icons -->
     <link rel="shortcut icon" href="./images/EMEK.png" type="image/x-icon" />
