--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
     <!-- LOADER -->
 	<div class="preloader">
         <img src="./images/Electric-Loading.gif" alt="loader">
+		<p>EMEK Elektrik ve Elektronik yükleniyor ...</p>
 	</div>
     <!-- END LOADER -->
 
