--- a/about.html
+++ b/about.html
@@ -114,6 +114,7 @@
 	</div>
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fas fa-angle-up"></i></a>
     <!-- ALL JS FILES -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/all.js"></script>
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
