--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,7 @@
 	</div>
     <a href="#header" id="scroll-to-top" class="dmtop global-radius"><i class="fas fa-angle-up"></i></a>
     <!-- ALL JS FILES -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/all.js"></script>
     <script src="js/custom.js"></script>
 </body>
