--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 	</div>
     <a href="#header" id="scroll-to-top" class="dmtop global-radius"><i class="fas fa-angle-up"></i></a>
     <!-- ALL JS FILES -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="js/all.js" defer></script>
 	<script src="js/responsive-tabs.js" defer></script>
     <!-- ALL PLUGINS -->
