--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="barber_version">
-    <div class="preloader">
+  <!--  <div class="preloader">
         <img src="./images/Electric-Loading.gif" alt="loader">
 		<p>EMEK Elektrik ve Elektronik yükleniyor ...</p>
 	</div>
+ -->
 	<!-- Start header -->
   <div id="home">
 	<header class="top-navbar" id="header">
